--- a/_sass/_darkmode.scss
+++ b/_sass/_darkmode.scss
@@ -23,8 +23,8 @@ h2 {
  color: #58a6ff; /* Vibrant Blue */
 }
 
-/* Style for H3 tags within blog post content */
-.post-content h3 {
+/* Style for H3 tags globally */
+h3 {
   color: #58a6ff; /* Vibrant Blue, same as H2 */
 }
 
