--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,12 @@
 
   <body>
     <header class="container">
-      <h1><a href="{{ '/' | relative_url }}">{{ site.title }}</a> 🚀</h1>
+      <h1>
+  <a href="{{ '/' | relative_url }}" style="text-decoration: none; color: inherit;">
+    <img src="/assets/images/logo.svg" alt="{{ site.title }} Logo" width="60" height="60" style="vertical-align: middle; margin-right: 15px;">
+    {{ site.title }} 🚀
+  </a>
+</h1>
       <nav>
         <ul>
           <li><a href="{{ '/' | relative_url }}">Home 🏠</a></li>
