--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,12 +70,10 @@
 
   <body>
     <header class="container">
-      <h1>
-  <a href="{{ '/' | relative_url }}" style="text-decoration: none; color: inherit;">
-    <img src="/assets/images/logo.svg" alt="{{ site.title }} Logo" width="188" height="50" style="vertical-align: middle; margin-right: 15px;">
-    {{ site.title }} 🚀
-  </a>
-</h1>
+      <div class="site-logo"> <a href="{{ '/' | relative_url }}" style="text-decoration: none; color: inherit;">
+    <img src="/assets/images/logo.svg" alt="{{ site.title }} Logo" width="188" height="50" style="vertical-align: middle;">
+    </a>
+</div>
       <nav>
         <ul>
           <li><a href="{{ '/' | relative_url }}">Home 🏠</a></li>
