--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,9 +82,9 @@
           <li><a href="{{ '/blog.html' | relative_url }}">Blog ✍️</a></li>
           <li><a href="{{ '/dns-tool.html' | relative_url }}">DNS Tool 🛠️</a></li>
           <li><a href="{{ '/about.html' | relative_url }}">About 🧑‍🔬</a></li>
+          <li><a href="https://schedule.it-help.tech/" class="cta-button">Book Now<span class="button-icon"> 📅</span></a></li>
         </ul>
       </nav>
-      <a href="https://schedule.it-help.tech/" class="cta-button">Book Now<span class="button-icon"> 📅</span></a>
     </header>
 
     <main class="container">
