--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,7 @@
           <li><a href="{{ '/blog.html' | relative_url }}">Blog ✍️</a></li>
           <li><a href="{{ '/dns-tool.html' | relative_url }}">DNS Tool 🛠️</a></li>
           <li><a href="{{ '/about.html' | relative_url }}">About 🧑‍🔬</a></li>
-          <li><a href="https://schedule.it-help.tech/">Book Now 📅</a></li>
+          <li><a href="https://schedule.it-help.tech/">Schedule 📅</a></li>
         </ul>
       </nav>
     </header>
