--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
         <ul>
           <li><a href="{{ '/' | relative_url }}">Home 🏠</a></li>
           <li><a href="{{ '/services.html' | relative_url }}">Services 🛠️</a></li>
-          <li><a href="{{ '/billing.html' | relative_url }}">Rates & Billing 💰</a></li>
+          <li><a href="{{ '/billing.html' | relative_url }}">Pricing 💰</a></li>
           <li><a href="{{ '/dns-tool.html' | relative_url }}">DNS Tool 🛠️</a></li>
           <li><a href="{{ '/blog.html' | relative_url }}">Blog ✍️</a></li>
           <li><a href="{{ '/about.html' | relative_url }}">About 🧑‍🔬</a></li>
