--- a/_sass/_darkmode.scss
+++ b/_sass/_darkmode.scss
@@ -7,6 +7,7 @@ body {
   background-color: #161b22; /* Slightly Lighter Dark Background */
   color: #c9d1d9;
   font-family: "JetBrains Mono", "Courier New", monospace; /* Using JetBrains Mono */
+  line-height: 1.6;
   margin: 0;
   padding: 0;
 }
