--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@
   <div style="text-align: center; margin-bottom: 1rem;">
     <img src="/assets/images/owl-of-athena.png" alt="Owl of Athena symbol" width="100" height="100">
   </div>
-  <p>&copy; {{ site.time | date: '%Y' }} {{ site.title }}. A service by <a href="https://it-help.tech">IT Help San Diego Inc.</a></p>
+  <p>&copy; {{ site.time | date: '%Y' }} {{ site.title }}. <span class="service-line">A service by <a href="https://it-help.tech">IT Help San Diego Inc.</a></span></p>
   <p class="footer-brag">✨ Built with Jekyll/GitHub, hosted on AWS S3/CloudFront/Route 53 (&lt;$10/mo). Zero JS, trackers, or cookies. Just lean, fast, cost-efficient tech. ✨</p>
 </footer>
   </body>
