--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -121,7 +121,7 @@ footer.container {
     width: 100%;
     max-width: 100%;
     margin: 0 auto;
-    text-aign: center;
+    text-align: center;
 }
 
 footer p {
