--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
       "provider": {
         "@type": "Organization",
         "name": "IT Help San Diego Inc.",
-        "url": "https://it-help.tech"
+        "url": "https://remote-it-help.com"
       },
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
