--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,7 +48,11 @@ layout: default
     <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %-d, %Y" }}</time>
     {% if page.author %} • {{ page.author }}{% endif %}
   </p>
-
+  {% if page.image %}
+  <div class="post-featured-image" style="margin-bottom: 1.5rem;">
+    <img src="{{ page.image | relative_url }}" alt="{{ page.title }} featured image" style="width: 100%; max-width: 700px; height: auto; display: block; margin-left: auto; margin-right: auto; border-radius: 8px;">
+  </div>
+  {% endif %}
   <div class="post-content">
     {{ content }}
   </div>
